# shared-workflows

./: .clang-format  .clang-format-include  .cspell.json  .gitignore  README.md  requirements.txt  ruff.toml
.github/workflows/: c-version.yml  ci.yml  clang-format.yml  deploy-gs.yml  deploy-release.yml  deploy-s3.yml  docs.yml  gcloud-run-jobs-execute.yml  gcloud-upload-artifact.yml  kicad-release.yml  kicad-version.yml  pr-change-log.yml  rust-version.yml  spec-version.yml  toml-version.yml  uv-docs.yml  version.yml
docs/: .cspell.json  c-version.md  check-format.md  conf.py  deploy.md  docs.md  gcloud.md  index.rst  introduction.md  kicad-release.md  kicad-version.md  pr-change-log.md  pyproject.toml  rust-version.md  spec-version.md  task-lists.md  toml-version.md  uv-docs.md  uv-makefile  version.md
docs/_static/: custom.css  fix-nested-lists.js
release/: postface.md  preface.md
sample_kicad/: config.kibot.yaml
sample_kicad/sample/: sample.kicad_pcb  sample.kicad_pro  sample.kicad_sch
sample_rust/: Cargo.toml
sample_toml/: pyproject.toml
samples/C/: sample.c  sample.h  version.h
samples/C/excluded/: sample.c
samples/kicad/sample/: sample.kicad_pcb  sample.kicad_sch
samples/rust/: Cargo.toml
samples/spec/: test.spec  test2.spec
samples/toml/: pyproject.toml
