[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-workflows"
version = "1.6.0"
description = "Noveto Processes and Toolchains documentation"
authors = [
    {name = "NXLabs", email = "info@nxlabs.com"},
]
requires-python = ">=3.12.9,<3.13"

dependencies = [
    "jinja2",
    "myst-parser==4.0.1",
    "sphinx==8.2.1",
    "sphinx-design",
    "sphinx-pdj-theme==0.7.3",
]